<resources>
    <string name="app_name">AVTS_App</string>
    <string name="welcome_page_description">Application welcome, press ENTER to proceed.</string>
    <string name="welcome_page_enter_button">Enter</string>
    <string name="privacy_policy_page_description">Please read the privacy policy, confirm that you agree with the policy, then press OK to proceed.</string>
    <string name="privacy_policy">
        "We collect personal data from you, so please read this Privacy Policy carefully before proceeding.\n\n"
        "This policy (the Policy) explains the way of treatment of the information which is provided or collected in the websites on which this Policy is posted. In addition, the Policy also explains the information which is provided or collected in the course of using the applications of the Company which exist in the websites or platforms of other companies.\n\n"
        "The Company is the controller of the information provided or collected in the websites on which this policy is posted and in the course of using the applications of the Company which exist in the websites or platforms of other companies.\n\n"
        "Through this policy, the Company regards personal information of the users as important and inform them of the purpose and method of Company's using the personal information provided by the users and the measures taken by the Company for protection of those personal information.\n\n"
        "This policy will be effective on the 1st of July 2015 and, in case of modification thereof, the Company will make public notice of it through posting it on the bulletin board of Company's website or individual notice through sending mails, fax or e-mails."
        "The users or their legal representatives, as main agents of the information, may exercise the following rights regarding the collection, use and sharing of personal information by the Company:\n\n"
        "• exercise right to access to personal information\n"
        "• make corrections or deletion\n"
        "• make temporary suspension of treatment of personal information\n"
        "• request the withdrawal of their consent provided before\n\n"
        "If, in order to exercise the above rights, you, as a user, use the menu of amendment of member information of webpage or contact the Company by sending a document or e-mails, or using telephone to the company(or person in charge of management of personal information or a deputy), the Company will take measures without delay: Provided that the Company may reject the request of you only to the extent that there exists either proper cause as prescribed in the laws or equivalent cause.\n"
    </string>
    <string name="check_box">I have read and agree with the Policy above.</string>
    <string name="confirm_button">OK</string>
    <string name="input_form_page_description">Input your information, including name, phone number and e-mail address, then press SUBMIT to proceed.</string>
    <string name="user_info">UserInfo</string>
    <string name="username">Username</string>
    <string name="username_hint">Input your name here.</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Input your phone number here.</string>
    <string name="email_address">E-mail Address</string>
    <string name="email_address_hint">Input your E-mail address here.</string>
    <string name="submit_button">Submit</string>
    <string name="active_bluetooth_page_description">Service is running at background, you can close the application now.</string>
    <string name="update_button">Update</string>
</resources>