<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView android:id="@+id/imageViewInputFormBackground" android:layout_width="match_parent" android:layout_height="match_parent"
        android:contentDescription="@string/input_form_page_description" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/input_form_background" />
    <TextView android:id="@+id/textViewUsernameLabel" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/username" android:textColor="@color/black" android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.092" />
    <EditText android:id="@+id/editTextPersonName" android:layout_width="315dp" android:layout_height="50dp"
        android:ems="10" android:hint="@string/username_hint" android:importantForAutofill="no" android:inputType="textPersonName"
        android:textSize="20sp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsernameLabel" app:layout_constraintVertical_bias="0.0" tools:ignore="TextContrastCheck" />
    <TextView android:id="@+id/textViewPhoneLabel" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="8dp" android:text="@string/phone_number" android:textColor="@color/black"
        android:textSize="20sp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" app:layout_constraintVertical_bias="0.0" />
    <EditText android:id="@+id/editTextPhone" android:layout_width="315dp" android:layout_height="50dp" android:ems="10"
        android:hint="@string/phone_number_hint" android:importantForAutofill="no" android:inputType="phone"
        android:textSize="20sp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhoneLabel" app:layout_constraintVertical_bias="0.0" tools:ignore="TextContrastCheck" />
    <TextView android:id="@+id/textViewEmailAddressLabel" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="8dp" android:text="@string/email_address"
        android:textColor="@color/black" android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" app:layout_constraintVertical_bias="0.0" />
    <EditText android:id="@+id/editTextEmailAddress" android:layout_width="315dp" android:layout_height="50dp"
        android:ems="10" android:hint="@string/email_address_hint" android:importantForAutofill="no"
        android:inputType="textEmailAddress" android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailAddressLabel" app:layout_constraintVertical_bias="0.0" tools:ignore="TextContrastCheck" />
    <Button android:id="@+id/submitButton" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="32dp" android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>